--- a/custom.css
+++ b/custom.css
@@ -1,7 +1,7 @@
 /* Home Section */
 #home {
     height: 100vh;
-    background-image: url('path-to-your-image.jpg');
+    background-image: url('E:\HtmlProject\asset\images\logo background.jpg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
